openshift/deployment_config.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 4
  labels:
    app: keycloak-rest-adapter
  name: keycloak-rest-adapter
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    app: keycloak-rest-adapter
    deploymentconfig: keycloak-rest-adapter
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: keycloak-rest-adapter
        deploymentconfig: keycloak-rest-adapter
    spec:
      containers:
      - image: gitlab-registry.cern.ch/authzsvc/keycloak-rest-adapter@sha256:b47a7e2bb0460bc53caf73b815de8b882c3681fe1a00236fcf796d0d7c6ffe1d
        imagePullPolicy: Always
        name: keycloak-rest-adapter
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/src/app/config
          name: keycloak-rest-adapter-configmap-rexw3
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: keycloak-rest-adapter-configmap
        name: keycloak-rest-adapter-configmap-rexw3
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - keycloak-rest-adapter
      from:
        kind: ImageStreamTag
        name: keycloak-rest-adapter:latest
        namespace: test-keycloak-rest-adapter
      lastTriggeredImage: gitlab-registry.cern.ch/authzsvc/keycloak-rest-adapter@sha256:b47a7e2bb0460bc53caf73b815de8b882c3681fe1a00236fcf796d0d7c6ffe1d
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
