openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: keycloak-rest-adapter
  name: keycloak-rest-adapter
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak-rest-adapter
    deploymentconfig: keycloak-rest-adapter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
